--- a/css/style.css
+++ b/css/style.css
@@ -243,11 +243,11 @@ ul, li{ margin:0; padding:0; list-style:none; }
     content: '';
     position: absolute;
     width: 67%;
-    height: 67%;
+    height: 60%;
     bottom: 0;
     right: 0;
     background: url(../media/Main_item.png) no-repeat right bottom;
-    background-size: cover;
+    background-size: contain;
     filter: blur(1px);
     opacity: 0.6;
 }
@@ -304,12 +304,12 @@ ul, li{ margin:0; padding:0; list-style:none; }
 #about::before {
   content: '';
   position: absolute;
-  width: 75%;
-  height: 75%;
+  width: 92%;
+  height: 92%;
   bottom: 0;
   right: 0;
   background: url(../media/sub1_img.png) no-repeat right bottom;
-  background-size: cover;
+  background-size: contain;
 }
 .about_wrap {
   width: 100%;
@@ -378,6 +378,7 @@ ul, li{ margin:0; padding:0; list-style:none; }
   margin-top: 2%;
 }
 .overview_txt h5 {
+  color: #494949;
   font-weight: 400;
   font-size: 2rem;
   margin-bottom: 0.2%;
@@ -386,9 +387,10 @@ ul, li{ margin:0; padding:0; list-style:none; }
   color: #665BA3;
   font-size: 3rem;
   font-weight: bold;
-  margin-bottom: 1.4%;
+  margin-bottom: 1.5%;
 }
 .overview_txt p {
+  color: #222222;
   font-weight: 300;
   margin-bottom: 1.3%;
   line-height: 165%;
@@ -410,7 +412,8 @@ ul, li{ margin:0; padding:0; list-style:none; }
 /* sub_end */
 #sub_end {
   width: 100%;
-  height: 90vh;
+  height: 70vh;
+  margin-top: 10%;
   position: relative;
   overflow: hidden;
 }
@@ -422,7 +425,7 @@ ul, li{ margin:0; padding:0; list-style:none; }
 .end_wrap img {
   max-width: 40%;
   position: absolute;
-  bottom: 0;
+  bottom: -1px;
 }
 
 /* footer */
